# tradepilot-ai

./: .gitignore
backend/: pyproject.toml  test_db.py
backend/alembic/: env.py
backend/alembic/versions/: 064edebad568_add_email_to_users.py  22eb2ea9ba0b_add_portfolios.py  293891e1768c_add_watchlists_and_watchlist_items.py  8f1206df7981_create_instruments_table.py  b3cd3d65dee3_add_user_relationship_to_instruments.py  ca37b2deaa8a_add_transactions.py  e6893234aeef_create_users_table.py  f059d758b898_add_holdings.py
backend/app/: app_factory.py  main.py
backend/app/api/: auth.py  dependencies.py  health.py  router.py
backend/app/api/routes/: auth.py  holdings.py  instruments.py  portfolios.py  transactions.py  watchlists.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: base.py  database.py
backend/app/models/: __init__.py  holding.py  instrument.py  portfolio.py  transaction.py  user.py  watchlist.py  watchlist_item.py
backend/app/repositories/: __init__.py  holding_repository.py  instrument_repository.py  portfolio_repository.py  transaction_repository.py  user_repository.py  watchlist_repository.py
backend/app/schemas/: __init__.py  holding.py  instrument.py  portfolio.py  transaction.py  user.py  watchlist.py
backend/app/services/: __init__.py  auth_service.py  holding_service.py  instrument_service.py  portfolio_service.py  transaction_service.py  user_service.py  watchlist_service.py
